# energy-consumption-time-series

./: .gitignore  main.py  pyproject.toml
.github/workflows/: lint.yaml
core/: functional.py
data/models/: AEP_regressor.pkl  COMED_regressor.pkl  DAYTON_regressor.pkl  DEOK_regressor.pkl  DOM_regressor.pkl  DUQ_regressor.pkl  EKPC_regressor.pkl  NI_regressor.pkl  PJME_regressor.pkl  PJMW_regressor.pkl
plotting/: plotter.py
scripts/: FE_regressor.pkl  PJM_Load_regressor.pkl  __init__.py  train_model.py
