[project]
name = "energy-consumption-time-series"
version = "0.1.0"
description = "HSE course work"
readme = "README.md"
authors = [
    { name = "Andrew Kozmin", email = "syn.kolbasyn.06@gmail.com" },
    { name = "Artemii Korsaev", email = "abkorsaev@edu.hse.ru" },
    { name = "first_name last_name", email = "your@email.com" }
]
requires-python = ">=3.13, <3.14"
dependencies = [
    "matplotlib>=3.10.3",
    "msgspec[toml]>=0.19.0",
    "pandas>=2.3.0",
    "pyside6>=6.9.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[tool.ruff]
src = ["./main.py", "./library/"]
lint.select = ["ALL"]
lint.ignore = ["D203", "D212"]
line-length = 79
